test/library/packages/DistributedIters/checkBadInput-guided.good
checkBadInput-guided.chpl:16: error: assert failed - DistributedIters: Guided iterator (serial): must use a valid domain or range
